2007-04-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Ast
        * more dummies
        * added TemplateInfo and InheritedTemplateParams

2007-04-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

        AST
        * added dummy record copies to force compile errors when the types
          in the ast change
        * exploit new type_id feature of memcheck in check_oast
        
        Elsa

        * added TemplateInfo and InheritedTemplateParams to ocaml
          reflection; in ocaml those are different record types, although
          they are in a class hierarchy with TemplateParams. However,
          TemplateParams objects seem not to be exist.
        * rename scope.template_params into scope_template_params
        * added circularity support for compound_info's
        * new nullables and new circularities added below        

2007-04-18  Hendrik Tews  <tews@gromit>

        * new nullables
           Variable.templInfo (Variable.templateInfo()) (without hint!)
           TemplateInfo.instantiationOf
           TemplateInfo.specializationOf (without hint!)
           TemplateInfo.partialInstantiationOf (without hint!)
           TemplateInfo.definitionTemplateInfo
           TemplateInfo.defnScope
           TemplateInfo.var
        * new circularities
           TemplateInfo.var
           TemplateInfo.instantiationOf
           TemplateInfo.specializationOf
           TemplateInfo.partialInstantiationOf
           InheritedTemplateParams.enclosing

        Asttools:
        * adjusted to elsa changes
        * ast_graph: added node selection and partial graph output

2007-04-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Elsa:
        * make EnumType::Value a proper ast node with its own annotation
        * added ocaml reflection code to EnumType::Value, adopt the code
          for EnumType accordingly
        * need a const_cast for the iteration over EnumType::Value,
          because there is only a const StringObjDict iterator