@@ -87,6 +87,8 @@ let compoundType_Keyword_fun = function
   | K_CLASS -> ()
   | K_UNION -> ()
 
+let templ_kind_fun(kind : templateThingKind) = ()
+
 
 (***************** variable ***************************)
 
@@ -131,7 +133,8 @@ let rec variable_fun(v : annotated variable) =
 and templ_info_fun ti =
   (* unused recored copy to provoke compilation errors for new fields *)
   let _dummy = {
-    poly_templ = ti.poly_templ; template_params = ti.template_params;
+    poly_templ = ti.poly_templ; templ_kind = ti.templ_kind;
+    template_params = ti.template_params;
     template_var = ti.template_var; inherited_params = ti.inherited_params; 
     instantiation_of = ti.instantiation_of; 
     instantiations = ti.instantiations; 
@@ -156,6 +159,7 @@ and templ_info_fun ti =
       visit annot;
 
       annotation_fun ti.poly_templ;
+      templ_kind_fun ti.templ_kind;
       List.iter variable_fun ti.template_params;
 
       (* POSSIBLY CIRCULAR *)
