@@ -90,7 +90,8 @@ let rec variable_fun(v : annotated variable) =
 and templ_info_fun ti =
   (* unused recored copy to provoke compilation errors for new fields *)
   let _dummy = {
-    poly_templ = ti.poly_templ; template_params = ti.template_params;
+    poly_templ = ti.poly_templ; templ_kind = ti.templ_kind;
+    template_params = ti.template_params;
     template_var = ti.template_var; inherited_params = ti.inherited_params; 
     instantiation_of = ti.instantiation_of; 
     instantiations = ti.instantiations; 
