@@ -12,8 +12,10 @@ ml_ctype_constructors.cmo: ml_ctype.cmo cc_ast_gen_type.cmo
 ml_ctype_constructors.cmx: ml_ctype.cmx cc_ast_gen_type.cmx 
 ast_annotation.cmo: ast_annotation.cmi 
 ast_annotation.cmx: ast_annotation.cmi 
-oast_header.cmo: oast_header_version.cmo 
-oast_header.cmx: oast_header_version.cmx 
+oast_header.cmo: oast_header_version.cmo cc_ast_gen_type.cmo \
+    ast_annotation.cmi 
+oast_header.cmx: oast_header_version.cmx cc_ast_gen_type.cmx \
+    ast_annotation.cmx 
 ast_marshal.cmo: oast_header.cmo ml_ctype.cmo cc_ast_gen_type.cmo \
     ast_annotation.cmi 
 ast_marshal.cmx: oast_header.cmx ml_ctype.cmx cc_ast_gen_type.cmx \
