@@ -1,5 +1,8 @@
 2007-04-20  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
+        Elsa, Ast
+        * add TemplateInfo.getKind
+
         Ast
         * more dummies
         * added TemplateInfo and InheritedTemplateParams
